# job-orchestration-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260413_01_create_jobs_and_job_steps.py  20260430_01_create_job_events.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  errors.py  middleware.py
app/api/routes/: __init__.py  jobs.py
app/api/schemas/: __init__.py  errors.py  jobs.py
app/core/: __init__.py  config.py  inference_metadata.py  job_events.py  job_lifecycle.py
app/manifests/: __init__.py  builder.py
app/model_registry/: __init__.py  registry.py
app/orchestration/: __init__.py
app/orchestration/pipeline/: __init__.py  executor.py  steps.py
app/orchestration/services/: __init__.py  orchestration_service.py
app/persistence/: __init__.py  db.py
app/persistence/models/: __init__.py  job.py  job_event.py  job_step.py
app/persistence/repositories/: __init__.py  job_repository.py
app/providers/: __init__.py
app/providers/llm/: __init__.py  openai_compatible_provider.py  openai_provider.py  runtimes.py
app/state/: __init__.py  redis_state.py
docs/: demo-flow.md  framework-vs-custom-orchestration.md
infra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/integration/: conftest.py  test_health.py
tests/integration/api/: test_auth_rbac.py  test_demo_flow.py  test_jobs_create.py  (+3 more)
tests/unit/: test_settings.py
(+12 files in other folders)
